Fixed awkward spacing between projects

--- a/css/main.css
+++ b/css/main.css
@@ -285,11 +285,11 @@ p {
   list-style: none;
   display: -webkit-box;
   display: -moz-box;
-  display: ms-flexbox;
+  display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
   -webkit-flex-flow: row wrap;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 #bookeda {
@@ -373,6 +373,7 @@ p {
   text-align: center;
   box-shadow: 0px 0px 9px 3px rgba(0, 0, 0, 0.2);
   border-radius: 15px;
+  margin: 15px;
 }
 
 .flex-item:hover {
